--- a/style.css
+++ b/style.css
@@ -6,3 +6,11 @@ body{
 header{
     text-align: center;
 }
+
+span{
+    background-color: rgb(54, 236, 54);
+    color: white;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
