--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@ span{
     border: 1px solid black;
     border-radius: 5px;
 }
+
+*{
+  padding: 0;
+  margin: 0;
+}
+
+p{
+  margin: 10px 0px;
+}
