--- a/style.css
+++ b/style.css
@@ -15,11 +15,10 @@ span{
     border-radius: 5px;
 }
 
-*{
-  padding: 0;
-  margin: 0;
+div{
+  border: 1px black solid;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 10px;
 }
 
-p{
-  margin: 10px 0px;
-}
